add update form and component to add/update questions

--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,6 +1,2 @@
 <h2>Welcome to our store!</h2>
-<div *ngFor="let question of questions | async" class="panel panel-default">
-  <div class="panel-body">
-    <h3><em>Question: {{question.question}}</em> --Answer: {{question.answer}}</h3>
-  </div>
-</div>
+<a routerLink="admin">Admin</a>
