--- a/src/app/welcome/welcome.component.html
+++ b/src/app/welcome/welcome.component.html
@@ -1,2 +1,4 @@
-<h2>Welcome to our store!</h2>
-<a routerLink="admin">Admin</a>
+<br>
+<div class='welcome'>
+  <p class='words'>To begin playing, selected Start Game!</p>
+</div>
