to do getelmrnt by value

--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -3,4 +3,14 @@
   <div *ngIf="player != null">
     <p>game begins!!!!</p>
   </div>
+  {{player.name}} - {{player.level}}
+ 
+  <button (click)="playGame()">Start</button>
+  <div *ngIf="playGame()">
 
+
+  </div>
+
+  
+
+  
